--- a/KinectGesturesServer/MainWindow.xaml
+++ b/KinectGesturesServer/MainWindow.xaml
@@ -1,31 +1,35 @@
 ﻿<Window x:Class="KinectGesturesServer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="KinectGestures Control Panel" Height="480" Width="320">
+        Title="KinectGestures Control Panel" Height="480" Width="320" Closing="Window_Closing">
     <StackPanel Orientation="Vertical">
         <GroupBox Header="Preview Video" Margin="5">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-                <ToggleButton Name="rawVideoToggleButton" Content="Raw Video" Margin="20, 0, 20, 0"/>
-                <ToggleButton Name="depthVideoToggleButton" Content="Depth Video" Margin="20, 0, 20, 0"/>
+                <ToggleButton Name="rawVideoToggleButton" Content="Raw Video" Margin="20, 0, 20, 0" Click="rawVideoToggleButton_Click"/>
+                <ToggleButton Name="depthVideoToggleButton" Content="Depth Video" Margin="20, 0, 20, 0" Click="depthVideoToggleButton_Click"/>
             </StackPanel>
         </GroupBox>
         <GroupBox Header="Hand Tracking" Margin="5">
-            <Grid Name="handTrackingGrid">
+            <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="40"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Grid.Column="0">ID</Label>
-                <Label Grid.Row="0" Grid.Column="1">Color</Label>
+                <Label Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center">ID</Label>
+                <Label Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center">Color</Label>
                 <Label Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center">X</Label>
                 <Label Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center">Y</Label>
                 <Label Grid.Row="0" Grid.Column="4" HorizontalAlignment="Center">Z</Label>
+                <StackPanel Name="handTrackingStackPanel" Grid.Row="1" Grid.ColumnSpan="5" Orientation="Vertical">
+                    
+                </StackPanel>
             </Grid>
         </GroupBox>
         <GroupBox Header="Finger Tracking" Margin="5">
