--- a/KinectGesturesServer/VideoWindow.xaml
+++ b/KinectGesturesServer/VideoWindow.xaml
@@ -1,8 +1,11 @@
 ﻿<Window x:Class="KinectGesturesServer.VideoWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="VideoWindow" Height="480" Width="640" ResizeMode="NoResize" WindowStyle="SingleBorderWindow" Closing="Window_Closing">
+        Title="VideoWindow" Height="520" Width="663" ResizeMode="NoResize" WindowStyle="SingleBorderWindow" Closing="Window_Closing">
     <Canvas Name="canvas">
         <Image Name="videoImage" Canvas.Left="0" Canvas.Top="0" Width="640" Height="480"/>
+        <Line X1="160" X2="160" Y1="0" Y2="480" Stroke="Orange"/>
+        <Line X1="480" X2="480" Y1="0" Y2="480" Stroke="Orange"/>
+        <Line X1="0" X2="640" Y1="240" Y2="240" Stroke="Orange"/>
     </Canvas>
 </Window>
