derivative finger detector

--- a/KinectGesturesServer/MainWindow.xaml
+++ b/KinectGesturesServer/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KinectGesturesServer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="KinectGestures Control Panel" Height="480" Width="320" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="KinectGestures Control Panel" Height="534" Width="325" Loaded="Window_Loaded" Closing="Window_Closing">
     <StackPanel Orientation="Vertical">
         <GroupBox Header="Preview Video" Margin="5">
             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="5">
@@ -73,24 +73,27 @@
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="70"/>
-                    <ColumnDefinition Width="70"/>
-                    <ColumnDefinition Width="70"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Name="calibrationButton" HorizontalAlignment="Center" VerticalAlignment="Center" Click="calibrationButton_Click">Calibrate</Button>
+                <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Name="calibrationButton" HorizontalAlignment="Center" VerticalAlignment="Center" Click="calibrationButton_Click">Calibrate</Button>
 
-                <Slider Grid.Row="1" Grid.Column="1" Name="threshold1Slider" Minimum="0" Maximum="50" HorizontalAlignment="Center" Orientation="Vertical" ValueChanged="thresholdSliders_ValueChanged" SmallChange="0.1" LargeChange="5" />
-                <TextBox Grid.Row="2" Grid.Column="1" Name="threshold1TextBox" IsReadOnly="True" Margin="2" TextAlignment="Center"/>
-                <Label Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center" Content="FingerMin"></Label>
+                <Slider Grid.Row="1" Grid.Column="0" Name="threshold1Slider" Minimum="0" Maximum="10" HorizontalAlignment="Center" Orientation="Vertical" ValueChanged="thresholdSliders_ValueChanged" SmallChange="0.1" LargeChange="5" />
+                <TextBox Grid.Row="2" Grid.Column="0" Name="threshold1TextBox" IsReadOnly="True" Margin="2" TextAlignment="Center"/>
+                <Label Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center">MinWidth</Label>
                 
-                <Slider Grid.Row="1" Grid.Column="2" Name="threshold2Slider" Minimum="0" Maximum="50" Orientation="Vertical" HorizontalAlignment="Center" ValueChanged="thresholdSliders_ValueChanged" SmallChange="1" LargeChange="5"/>
-                <TextBox Grid.Row="2" Grid.Column="2" Name="threshold2TextBox" IsReadOnly="True" Margin="2" TextAlignment="Center"/>
-                <Label Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" Content="FingerMax"></Label>
+                <Slider Grid.Row="1" Grid.Column="1" Name="threshold2Slider" Minimum="0" Maximum="100" Orientation="Vertical" HorizontalAlignment="Center" ValueChanged="thresholdSliders_ValueChanged" SmallChange="1" LargeChange="5"/>
+                <TextBox Grid.Row="2" Grid.Column="1" Name="threshold2TextBox" IsReadOnly="True" Margin="2" TextAlignment="Center"/>
+                <Label Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center">MaxWidth</Label>
 
-                <Slider Grid.Row="1" Grid.Column="3" Name="threshold3Slider" Minimum="0" Maximum="50" Orientation="Vertical" HorizontalAlignment="Center" ValueChanged="thresholdSliders_ValueChanged" SmallChange="1" LargeChange="5"/>
-                <TextBox Grid.Row="2" Grid.Column="3" Name="threshold3TextBox" IsReadOnly="True" Margin="2" TextAlignment="Center"/>
-                <Label Grid.Row="3" Grid.Column="3" HorizontalAlignment="Center">Blind</Label>
-            
+                <Slider Grid.Row="1" Grid.Column="2" Name="threshold3Slider" Minimum="0" Maximum="200" Orientation="Vertical" HorizontalAlignment="Center" ValueChanged="thresholdSliders_ValueChanged" SmallChange="1" LargeChange="5"/>
+                <TextBox Grid.Row="2" Grid.Column="2" Name="threshold3TextBox" IsReadOnly="True" Margin="2" TextAlignment="Center"/>
+                <Label Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center">MinLength</Label>
+
+                <Slider Grid.Row="1" Grid.Column="3" Name="threshold4Slider" Minimum="0" Maximum="200" Orientation="Vertical" HorizontalAlignment="Center" ValueChanged="thresholdSliders_ValueChanged" SmallChange="1" LargeChange="5"/>
+                <TextBox Grid.Row="2" Grid.Column="3" Name="threshold4TextBox" IsReadOnly="True" Margin="2" TextAlignment="Center"/>
+                <Label Grid.Row="3" Grid.Column="3" HorizontalAlignment="Center">MaxLength</Label>
             </Grid>
         </GroupBox>
     </StackPanel>
